--- a/tasks/init/v0/templates/client/app/base.html
+++ b/tasks/init/v0/templates/client/app/base.html
@@ -114,14 +114,14 @@
     <!-- min --><script src="components/bower-angular/angular.js"></script>
     <!-- ignore --><script src="components/bower-angular/angular-sanitize.js"></script>
 
-    <!-- build scripts/scripts.js -->
+    <!-- compile scripts/scripts.js -->
       <script src="scripts/app.js"></script>
       <script src="scripts/controllers/global.js"></script>
       <script src="scripts/controllers/home.js"></script>
       <script src="scripts/directives/match.js"></script>
       <script src="scripts/http-interceptor.js"></script>
       <script src="scripts/services/global.js"></script>
-    <!-- endbuild -->
+    <!-- endcompile -->
   <!-- endconcat -->
 
   {% if .Test %}
