Add a new annotation in the base file that shows we're the concated script should go (for the IE conditional comment).

--- a/tasks/init/v0/templates/client/app/base.html
+++ b/tasks/init/v0/templates/client/app/base.html
@@ -101,6 +101,7 @@
     <!--[if lt IE 9]>
       <script src="components/es5-shim/es5-shim.min.js"></script>
       <script src="components/json3/lib/json3.min.js"></script>
+      <script> var concat_script_here; </script>
     <![endif]-->
   <!-- endconcat -->
 
