--- a/tasks/init/v0/templates/client/app/base.html
+++ b/tasks/init/v0/templates/client/app/base.html
@@ -120,6 +120,7 @@
       <script src="scripts/controllers/global.js"></script>
       <script src="scripts/controllers/home.js"></script>
       <script src="scripts/directives/match.js"></script>
+      <script src="scripts/error-handler.js"></script>
       <script src="scripts/http-interceptor.js"></script>
       <script src="scripts/services/global.js"></script>
     <!-- endcompile -->
