--- a/tasks/init/v0/templates/client/test/e2e/runner.html
+++ b/tasks/init/v0/templates/client/test/e2e/runner.html
@@ -4,7 +4,7 @@
 
   <title>End2end Test Runner</title>
 
-  <script src="angular-scenario.js" ng-autotest></script>
+  <script src="/components/bower-angular/angular-scenario.js" ng-autotest></script>
 
   <script src="/scenarios/global.js"></script>
 
