--- a/tasks/init/v0/templates/client/test/e2e/runner.html
+++ b/tasks/init/v0/templates/client/test/e2e/runner.html
@@ -6,6 +6,7 @@
 
   <script src="/components/bower-angular/angular-scenario.js" ng-autotest></script>
 
+  <script src="/utils.js"></script>
   <script src="/scenarios/global.js"></script>
 
 </head>
