--- a/tasks/init/v0/templates/client/test/e2e/runner.html
+++ b/tasks/init/v0/templates/client/test/e2e/runner.html
@@ -4,9 +4,9 @@
 
   <title>End2end Test Runner</title>
 
-  <script src="/components/bower-angular/angular-scenario.js" ng-autotest></script>
-
+  <script src="/angular-scenario.js" ng-autotest></script>
   <script src="/utils.js"></script>
+  
   <script src="/scenarios/global.js"></script>
 
 </head>
