Structure the host data as Udacity. Make use of the constant function of the module object.

--- a/tasks/init/v0/templates/client/app/base.html
+++ b/tasks/init/v0/templates/client/app/base.html
@@ -133,7 +133,9 @@
     <!-- endcompile -->
   {% else %}
     <script type="text/javascript">
-      window.data = {% .Data %};
+      {% range .Data %}
+        angular.module('{% .Module %}').constant('{% .Name %}', {% .Value %});
+      {% end %}
     </script>
   {% end %}
 
