Fix the build. Better feedback infrastructure, fix issue #3.

--- a/tasks/init/v0/templates/client/app/base.html
+++ b/tasks/init/v0/templates/client/app/base.html
@@ -35,7 +35,7 @@
 
   <div style="display: none;" ng-controller="GlobalCtrl"></div>
 
-  <div class="navbar navbar-fixed-top">
+  <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner"><div class="container">
       <a href="#!/" class="brand">{{.AppName}}</a>
     </div></div>
@@ -137,7 +137,8 @@
     <!-- min --><script src="components/bower-angular/angular.js"></script>
     <!-- min --><script src="components/bower-angular/angular-sanitize.js"></script>
     <!-- compile scripts/bootstrap.js -->
-      <script src="app/components/bootstrap/js/bootstrap-transition.js"></script>
+      <script src="components/bootstrap/js/bootstrap-transition.js"></script>
+      <script src="components/bootstrap/js/bootstrap-modal.js"></script>
     <!-- endcompile -->
 
     <!-- compile scripts/scripts.js -->
