--- a/tasks/init/v0/templates/templates/mails/feedback.html
+++ b/tasks/init/v0/templates/templates/mails/feedback.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>Error</title>
+  <title>Feedback</title>
 
 </head>
 <body>
@@ -17,9 +17,9 @@
   </table><br>
 
   <div style="background-color: #f5f5f5; font-family: arial; border-top: 1px solid #e5e5e5;
-      padding: 4px 0 5px 32px; font-weight: bold;">Error</div>
+      padding: 4px 0 5px 32px; font-weight: bold;">Feedback</div>
 
-  <p>{{.Error|nl2br}}</p>
+  <p>{{.Message|nl2br}}</p>
 
   <p>&nbsp;</p>
   <p>&nbsp;</p>
