Add a tool to generate forms. Add styles.

--- a/tasks/init/v0/templates/client/app/base.html
+++ b/tasks/init/v0/templates/client/app/base.html
@@ -17,9 +17,7 @@
     <link rel="stylesheet" href="styles/bootstrap.css">
   <!-- endconcat -->
 
-  <style type="text/css">
-    [ng\:cloak], [ng-cloak], .ng-cloak { display: none; }
-  </style>
+  <style type="text/css"> .ng-cloak { display: none; } </style>
 
   {% if not .DevServer %}
     <script>
