--- a/tasks/init/v0/templates/client/app/base.html
+++ b/tasks/init/v0/templates/client/app/base.html
@@ -10,9 +10,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width">
 
-  <title>{{.AppName}}</title>
+  <title>{{ .AppName }}</title>
 
-  <!-- concat:css styles/{{.AppName}}.css -->
+  <!-- concat:css styles/{{ .AppName }}.css -->
     <link rel="stylesheet" href="styles/app.css">
     <link rel="stylesheet" href="styles/bootstrap.css">
   <!-- endconcat -->
@@ -21,7 +21,7 @@
 
   {% if not .DevServer %}
     <script>
-      var _gaq=[['_setAccount','UA-XXXXX-X']];
+      var _gaq=[['_setAccount','{% .Analytics %}']];
       (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
       g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
       s.parentNode.insertBefore(g,s)}(document,'script'));
@@ -35,7 +35,7 @@
 
   <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner"><div class="container">
-      <a href="#!/" class="brand">{{.AppName}}</a>
+      <a href="#!/" class="brand">{{ .AppName }}</a>
     </div></div>
   </div>
 
@@ -131,7 +131,7 @@
       '<\/script>');
   </script>
 
-  <!-- concat:js scripts/{{.AppName}}.js -->
+  <!-- concat:js scripts/{{ .AppName }}.js -->
     <!-- min --><script src="components/bower-angular/angular.js"></script>
     <!-- min --><script src="components/bower-angular/angular-sanitize.js"></script>
     <!-- compile scripts/bootstrap.js -->
