Filter & add things to the errors before sending them to server. Rename GlobalCtrl to AppCtrl.

--- a/tasks/init/v0/templates/angular/client/app/base.html
+++ b/tasks/init/v0/templates/angular/client/app/base.html
@@ -31,7 +31,7 @@
 </head>
 <body ng-app="app">
 
-  <div style="display: none;" ng-controller="GlobalCtrl"></div>
+  <div style="display: none;" ng-controller="AppCtrl"></div>
 
   <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner"><div class="container">
