Fix closure config. Add some minor fixes to the test task and closure test templates.

--- a/tasks/server/v0/templates/test-list.html
+++ b/tasks/server/v0/templates/test-list.html
@@ -26,6 +26,9 @@
 </head>
 <body>
 
+  <div style="float: right;">
+    <a href="/test/all">Test Runner</a>
+  </div>
   <h1 style="font-size: 40px;">All JsUnit Tests</h1>
 
   {{range .}}
