--- a/tasks/init/v0/templates/angular/client/app/styles/bootstrap/bootstrap.less
+++ b/tasks/init/v0/templates/angular/client/app/styles/bootstrap/bootstrap.less
@@ -11,7 +11,8 @@
 // Modified to fix the paths & add the font-awesome instead of icons.
 
 // Core variables and mixins
-@import "../../components/bootstrap/less/variables.less"; // Modify this for custom colors, font-sizes, etc
+//@import "../../components/bootstrap/less/variables.less"; // Modify this for custom colors, font-sizes, etc
+@import "variables.less"; // Modify this for custom colors, font-sizes, etc
 @import "../../components/bootstrap/less/mixins.less";
 
 // CSS Reset
@@ -64,3 +65,5 @@
 
 // Utility classes
 @import "../../components/bootstrap/less/utilities.less"; // Has to be last to override when necessary
+
+@import "bootswatch.less";
