--- a/tasks/init/v0/templates/angular/client/app/base.html
+++ b/tasks/init/v0/templates/angular/client/app/base.html
@@ -64,6 +64,9 @@
         <i class="icon-envelope-alt"></i>
         <a href="mailto:example@example.com">example@example.com</a>
       </div>
+      <div class="span4 offset4">
+        {% template "feedback" . %}
+      </div>
     </div></div>
   </footer>
 
@@ -99,23 +102,6 @@
     </div>
   </div>
 
-    <div id="feedback-dlg" class="modal hide fade" tabindex="-1">
-      <div class="modal-header">
-        <button class="close" data-dismiss="modal">&times;</button>
-        <h3>Ayuda / Contacto</h3>
-      </div>
-      <div class="modal-body">
-        <p>Dinos que te ocurre e intentaremos ayudarte en menos de 48 horas.</p>
-        <textarea class="span6" ng-model="message" rows="7"
-          placeholder="Tengo problemas con..." id="message"></textarea>
-      </div>
-      <div class="modal-footer">
-        <button class="btn btn-primary feedback-send" ng-disabled="!message"
-            ng-click="send()">Enviar mensaje</button>
-        <button class="btn" data-dismiss="modal">Cancelar</button>
-      </div>
-    </div>
-
   <!-- concat:js scripts/ie.js -->
     <!--[if lt IE 9]>
       <script src="components/es5-shim/es5-shim.min.js"></script>
@@ -133,9 +119,8 @@
   <!-- concat:js scripts/{{ .AppName }}.js -->
     <!-- min --><script src="components/bower-angular/angular.js"></script>
     <!-- min --><script src="components/bower-angular/angular-sanitize.js"></script>
+    <!-- min --><script src="components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- compile scripts/bootstrap.js -->
-      <script src="components/bootstrap/js/bootstrap-transition.js"></script>
-      <script src="components/bootstrap/js/bootstrap-modal.js"></script>
     <!-- endcompile -->
 
     <!-- compile scripts/scripts.js -->
@@ -164,4 +149,27 @@
 
 </body>
 </html>
+{% end %}
+
+{% define "feedback" %}
+<div ng-controller="FeedbackCtrl">
+  <button class="btn btn-inverse pull-right" ng-click="open()">Notificar error</button>
+  <div modal="dlgOpened" close="close()" options="opts" style="display: none;">
+    <div class="modal-header">
+      <button class="close" ng-click="close()">&times;</button>
+      <h4>Notificar error en la página</h4>
+    </div>
+    <div class="modal-body">
+      <p>Dinos cual es el problema que te has encontrado e intentaremos ayudarte
+        en menos de 48 horas.</p>
+      <textarea class="span6" ng-model="message" rows="7"
+        placeholder="Tengo problemas con..." id="message"></textarea>
+    </div>
+    <div class="modal-footer">
+      <button class="btn btn-primary" ng-disabled="!message || message.length < 5"
+        ng-click="send()">Enviar mensaje</button>
+      <button class="btn" ng-click="close()">Cancelar</button>
+    </div>
+  </div>
+</div>
 {% end %}
