--- a/tasks/init/v0/templates/angular/client/app/styles/bootstrap/bootstrap.less
+++ b/tasks/init/v0/templates/angular/client/app/styles/bootstrap/bootstrap.less
@@ -67,3 +67,43 @@
 @import "../../components/bootstrap/less/utilities.less"; // Has to be last to override when necessary
 
 @import "bootswatch.less";
+
+
+// Responsive.less
+// For phone and tablet devices
+// -------------------------------------------------------------
+
+
+// REPEAT VARIABLES & MIXINS
+// -------------------------
+// Required since we compile the responsive stuff separately
+
+//@import "variables.less"; // Modify this for custom colors, font-sizes, etc
+//@import "mixins.less";
+
+
+// RESPONSIVE CLASSES
+// ------------------
+
+@import "../../components/bootstrap/less/responsive-utilities.less";
+
+
+// MEDIA QUERIES
+// ------------------
+
+// Large desktops
+@import "../../components/bootstrap/less/responsive-1200px-min.less";
+
+// Tablets to regular desktops
+@import "../../components/bootstrap/less/responsive-768px-979px.less";
+
+// Phones to portrait tablets and narrow desktops
+@import "../../components/bootstrap/less/responsive-767px-max.less";
+
+
+// RESPONSIVE NAVBAR
+// ------------------
+
+// From 979px and below, show a button to toggle navbar contents
+@import "../../components/bootstrap/less/responsive-navbar.less";
+
