Log empty groups when compiling / concatenating files. Move the imagemin task logs to the verbose mode only. Fix ngtemplates to use the correct syntax. Fix the compiled unit tests.

--- a/tasks/init/v0/templates/angular/client/app/base.html
+++ b/tasks/init/v0/templates/angular/client/app/base.html
@@ -90,8 +90,8 @@
   <!-- concat:js scripts/{{ .AppName }}.js -->
     <!-- min --><script src="components/bower-angular/angular.js"></script>
     <!-- min --><script src="components/bower-angular/angular-sanitize.js"></script>
-    <!-- min --><script src="components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <!-- compile scripts/bootstrap.js -->
+    <!-- compile scripts/angular-bootstrap.js -->
+      <script src="components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endcompile -->
 
     <!-- compile scripts/scripts.js -->
