--- a/tasks/init/v0/templates/angular/client/app/base.html
+++ b/tasks/init/v0/templates/angular/client/app/base.html
@@ -72,38 +72,7 @@
 
   {% template "httperror" . %}
   {% template "globalmsg" . %}
-
-  <!-- concat:js scripts/ie.js -->
-    <!--[if lt IE 9]>
-      <script src="components/es5-shim/es5-shim.min.js"></script>
-      <script src="components/json3/lib/json3.min.js"></script>
-      <script> var concat_script_here; </script>
-    <![endif]-->
-  <!-- endconcat -->
-
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-  <script>
-    window.jQuery || document.write('<script src="components/jquery/jquery.min.js">' +
-      '<\/script>');
-  </script>
-
-  <!-- concat:js scripts/{{ .AppName }}.js -->
-    <!-- min --><script src="components/bower-angular/angular.js"></script>
-    <!-- min --><script src="components/bower-angular/angular-sanitize.js"></script>
-    <!-- compile scripts/angular-bootstrap.js -->
-      <script src="components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <!-- endcompile -->
-
-    <!-- compile scripts/scripts.js -->
-      <script src="scripts/app.js"></script>
-      <script src="scripts/controllers/global.js"></script>
-      <script src="scripts/controllers/home.js"></script>
-      <script src="scripts/directives/match.js"></script>
-      <script src="scripts/error-handler.js"></script>
-      <script src="scripts/http-interceptor.js"></script>
-      <script src="scripts/services/global.js"></script>
-    <!-- endcompile -->
-  <!-- endconcat -->
+  {% template "scripts" . %}
 
   {% if .Test %}
     <!-- compile scripts/test.js -->
@@ -181,4 +150,38 @@
     </tr></table>
   </div>
 </div>
+{% end %}
+
+{% define "scripts" %}
+<!-- concat:js scripts/ie.js -->
+  <!--[if lt IE 9]>
+    <script src="components/es5-shim/es5-shim.min.js"></script>
+    <script src="components/json3/lib/json3.min.js"></script>
+    <script> var concat_script_here; </script>
+  <![endif]-->
+<!-- endconcat -->
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script>
+  window.jQuery || document.write('<script src="components/jquery/jquery.min.js">' +
+    '<\/script>');
+</script>
+
+<!-- concat:js scripts/{{ .AppName }}.js -->
+  <!-- min --><script src="components/bower-angular/angular.js"></script>
+  <!-- min --><script src="components/bower-angular/angular-sanitize.js"></script>
+  <!-- compile scripts/angular-bootstrap.js -->
+    <script src="components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  <!-- endcompile -->
+
+  <!-- compile scripts/scripts.js -->
+    <script src="scripts/app.js"></script>
+    <script src="scripts/controllers/global.js"></script>
+    <script src="scripts/controllers/home.js"></script>
+    <script src="scripts/directives/match.js"></script>
+    <script src="scripts/error-handler.js"></script>
+    <script src="scripts/http-interceptor.js"></script>
+    <script src="scripts/services/global.js"></script>
+  <!-- endcompile -->
+<!-- endconcat -->
 {% end %}
