Better error pages.

--- a/tasks/init/v0/templates/angular/templates/errors/404.html
+++ b/tasks/init/v0/templates/angular/templates/errors/404.html
@@ -29,13 +29,16 @@
 </head>
 <body>
   <div class="container">
-    <h1>Error 404 <span>:(</span></h1>
+    <h1>Página no encontrada <span>:(</span></h1>
     <p>Lo sentimos mucho, pero la página a la que intentas acceder no existe.</p>
-    <p>Parece que esto se debe a:</p>
+    <p>Hemos avisado al administrador para que lo solucione lo antes posible.</p>
+    <p>Normalmente esto se debe a:</p>
     <ul>
       <li>una dirección mal escrita</li>
       <li>un vínculo sin actualizar</li>
     </ul>
+    <p>Puedes <a href="/">volver a la página principal</a> o buscar lo que necesites
+      a continuación.</p>
     <script>
       var GOOG_FIXURL_LANG = 'es', GOOG_FIXURL_SITE = location.host;
     </script>
