--- a/tasks/init/v0/templates/angular/templates/errors/500.html
+++ b/tasks/init/v0/templates/angular/templates/errors/500.html
@@ -20,12 +20,13 @@
 </head>
 <body>
   <div class="container">
-    <h1>Error 500 <span>:(</span></h1>
+    <h1>Error interno <span>:(</span></h1>
     <p>Lo sentimos mucho, pero la página ha sufrido un error mientras procesaba
         los datos.</p>
-    <p>Hemos mandado un email al administrador para que lo revise lo antes posible.</p>
+    <p>Hemos avisado al administrador para que lo revise lo antes posible.</p>
     <p>Seguramente sea algo temporal, así que puedes probar a
-      <a href="javascript:location.reload()">recargar la página</a>.</p>
+      <a href="javascript:location.reload()">recargar la página</a> o
+      <a href="/">volver a la página principal</a>.</p>
   </div>
 </body>
 </html>
