--- a/tasks/init/v0/templates/angular/templates/errors/405.html
+++ b/tasks/init/v0/templates/angular/templates/errors/405.html
@@ -16,30 +16,17 @@
     p { margin: 1em 0; }
     ul { padding: 0 0 0 40px; margin: 1em 0; }
     .container { max-width: 380px; _width: 380px; margin: 0 auto; }
-    /* google search */
-    #goog-fixurl ul { list-style: none; padding: 0; margin: 0; }
-    #goog-fixurl form { margin: 0; }
-    #goog-wm-qt, #goog-wm-sb { border: 1px solid #bbb; font-size: 16px; line-height: normal; vertical-align: top; color: #444; border-radius: 2px; }
-    #goog-wm-qt { width: 200px; height: 20px; padding: 5px; margin: 5px 10px 0 0; box-shadow: inset 0 1px 1px #ccc; }
-    #goog-wm-sb { display: inline-block; height: 32px; padding: 0 10px; margin: 5px 0 0; white-space: nowrap; cursor: pointer; background-color: #f5f5f5; background-image: -webkit-linear-gradient(rgba(255,255,255,0), #f1f1f1); background-image: -moz-linear-gradient(rgba(255,255,255,0), #f1f1f1); background-image: -ms-linear-gradient(rgba(255,255,255,0), #f1f1f1); background-image: -o-linear-gradient(rgba(255,255,255,0), #f1f1f1); -webkit-appearance: none; -moz-appearance: none; appearance: none; *overflow: visible; *display: inline; *zoom: 1; }
-    #goog-wm-sb:hover, #goog-wm-sb:focus { border-color: #aaa; box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1); background-color: #f8f8f8; }
-    #goog-wm-qt:focus, #goog-wm-sb:focus { border-color: #105cb6; outline: 0; color: #222; }
-    input::-moz-focus-inner { padding: 0; border: 0; }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Error 405 <span>:(</span></h1>
+    <h1>Página incorrecta <span>:(</span></h1>
     <p>Lo sentimos mucho, pero has intentado acceder a la página de forma incorrecta.</p>
     <p>Intenta lo siguiente:</p>
     <ul>
       <li>volver <a href="javascript:history.back();">atrás</a> a donde estabas antes</li>
       <li>empezar de nuevo desde la <a href="/">página principal</a></li>
     </ul>
-    <script>
-      var GOOG_FIXURL_LANG = 'es', GOOG_FIXURL_SITE = location.host;
-    </script>
-    <script src="http://linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js"></script>
   </div>
 </body>
 </html>
