Fix error handler. Improved error pages.

--- a/tasks/init/v0/templates/angular/templates/errors/404.html
+++ b/tasks/init/v0/templates/angular/templates/errors/404.html
@@ -9,13 +9,13 @@
     ::selection { background: #fe57a1; color: #fff; text-shadow: none; }
     html { padding: 30px 10px; font-size: 20px; line-height: 1.4; color: #737373; background: #f0f0f0; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
     html, input { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
-    body { max-width: 500px; _width: 500px; padding: 30px 20px 50px; border: 1px solid #b3b3b3; border-radius: 4px; margin: 0 auto; box-shadow: 0 1px 10px #a7a7a7, inset 0 1px 0 #fff; background: #fcfcfc; }
+    body { max-width: 600px; _width: 500px; padding: 30px 20px 50px; border: 1px solid #b3b3b3; border-radius: 4px; margin: 0 auto; box-shadow: 0 1px 10px #a7a7a7, inset 0 1px 0 #fff; background: #fcfcfc; }
     h1 { margin: 0 10px; font-size: 50px; text-align: center; }
     h1 span { color: #bbb; }
     h3 { margin: 1.5em 0 0.5em; }
     p { margin: 1em 0; }
     ul { padding: 0 0 0 40px; margin: 1em 0; }
-    .container { max-width: 380px; _width: 380px; margin: 0 auto; }
+    .container { max-width: 480px; _width: 480px; margin: 0 auto; }
     /* google search */
     #goog-fixurl ul { list-style: none; padding: 0; margin: 0; }
     #goog-fixurl form { margin: 0; }
@@ -31,14 +31,12 @@
   <div class="container">
     <h1>Página no encontrada <span>:(</span></h1>
     <p>Lo sentimos mucho, pero la página a la que intentas acceder no existe.</p>
-    <p>Hemos avisado al administrador para que lo solucione lo antes posible.</p>
-    <p>Normalmente esto se debe a:</p>
+    <p>Puedes probar lo siguiente:</p>
     <ul>
-      <li>una dirección mal escrita</li>
-      <li>un vínculo sin actualizar</li>
+      <li>revisar que la dirección esté bien escrita</li>
+      <li><a href="/">volver a la página principal</a></li>
+      <li>buscar lo que necesites a continuación.</li>
     </ul>
-    <p>Puedes <a href="/">volver a la página principal</a> o buscar lo que necesites
-      a continuación.</p>
     <script>
       var GOOG_FIXURL_LANG = 'es', GOOG_FIXURL_SITE = location.host;
     </script>
