--- a/tasks/init/v0/templates/angular/templates/errors/500.html
+++ b/tasks/init/v0/templates/angular/templates/errors/500.html
@@ -21,11 +21,10 @@
 <body>
   <div class="container">
     <h1>Error interno <span>:(</span></h1>
-    <p>Lo sentimos mucho, pero la página ha sufrido un error mientras procesaba
-        los datos.</p>
-    <p>Hemos avisado al administrador para que lo revise lo antes posible.</p>
-    <p>Seguramente sea algo temporal, así que puedes probar a
-      <a href="javascript:location.reload()">recargar la página</a> o
+    <p>Parece que algo ha salido mal.</p>
+    <p>Hacemos un seguimiento de estos errores de forma automática,
+      pero si el problema persiste, no dudes en contactar con nosotros.</p>
+    <p>Prueba a <a href="#" onclick="location.reload();">recargar la página</a> o
       <a href="/">volver a la página principal</a>.</p>
   </div>
 </body>
