--- a/tasks/init/v0/templates/angular/client/app/styles/bootstrap/main.less
+++ b/tasks/init/v0/templates/angular/client/app/styles/bootstrap/main.less
@@ -37,3 +37,8 @@ select:focus:invalid {
   .box-shadow(~"inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6)");
 }
 
+
+.control-group.error .input-prepend .add-on,
+.control-group.error .input-append .add-on {
+  border: 1px solid @errorBackground;
+}
