--- a/tasks/init/v0/templates/angular/client/app/base.html
+++ b/tasks/init/v0/templates/angular/client/app/base.html
@@ -161,7 +161,7 @@
   <![endif]-->
 <!-- endconcat -->
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<!-- min --><script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js"></script>
 <script>
   window.jQuery || document.write('<script src="components/jquery/jquery.min.js">' +
     '<\/script>');
