Update init task.

--- a/tasks/init/v0/templates/angular/client/app/base.html
+++ b/tasks/init/v0/templates/angular/client/app/base.html
@@ -35,7 +35,7 @@
 
   <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner"><div class="container">
-      <a href="#!/" class="brand">{{ .AppName }}</a>
+      <a href="#/" class="brand">{{ .AppName }}</a>
     </div></div>
   </div>
 
