--- a/tasks/init/v0/templates/angular/client/app/styles/bootstrap/bootstrap.less
+++ b/tasks/init/v0/templates/angular/client/app/styles/bootstrap/bootstrap.less
@@ -31,7 +31,7 @@
 
 // Components: common
 //@import "../../components/bootstrap/less/sprites.less";
-@import "font-awesome.less";
+@import "../font-awesome/font-awesome.less";
 @import "../../components/bootstrap/less/dropdowns.less";
 @import "../../components/bootstrap/less/wells.less";
 @import "../../components/bootstrap/less/component-animations.less";
