--- a/tasks/init/v0/templates/angular/client/app/views/404.html
+++ b/tasks/init/v0/templates/angular/client/app/views/404.html
@@ -8,6 +8,6 @@
   avisado al administrador para que lo solucione lo antes posible. Gracias
   por tu comprensión.</p>
 
-<p>Si quieres puedes volver a la <a href="#!/">página de inicio</a> para ver
+<p>Si quieres puedes volver a la <a href="#/">página de inicio</a> para ver
   si encuentras lo que necesitas.</p>
 
