--- a/tasks/init/v0/templates/angular/client/app/base.html
+++ b/tasks/init/v0/templates/angular/client/app/base.html
@@ -1,4 +1,4 @@
-{% define "base" %}
+{{ define "base" }}
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -19,17 +19,43 @@
 
   <style type="text/css"> .ng-cloak { display: none; } </style>
 
-  {% if not .DevServer %}
+  {{ if not .DevServer }}{{ if .Analytics }}
     <script>
-      var _gaq=[['_setAccount','{% .Analytics %}']];
+      var _gaq=[['_setAccount','{{ .Analytics }}']];
       (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
       g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
       s.parentNode.insertBefore(g,s)}(document,'script'));
     </script>
-  {% end %}
+  {{ end }}
 
 </head>
 <body ng-app="app">
+
+  <div ng-controller="ErrorCtrl">
+    <div modal="!ErrorRegister.isNull()" close="close()" options="opts"
+      style="display: none;">
+      <div class="modal-header">
+        <button class="close" ng-click="close()">&times;</button>
+        <h4>Error en la conexión</h4>
+      </div>
+      <div class="modal-body">
+        <div class="alert alert-error">Ha ocurrido un error mientras se
+          sincronizaban los datos de la aplicación con el servidor.</div>
+        <p>Comprueba que sigues conectado correctamente a Internet y prueba de nuevo.
+          Si el error persiste puedes probar a
+          <a href="javascript:location.reload();">recargar la página</a>.</p>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-primary" ng-click="close()">Cerrar</button>
+      </div>
+    </div>
+  </div>
+  <div id="global-msg" style="display: none;">
+    <div class="inline-block label label-warning">
+      Cargando datos...
+    </div>
+  </div>
+  <div id="notifications" class="notifications"></div>
 
   <div style="display: none;" ng-controller="AppCtrl"></div>
 
@@ -65,123 +91,56 @@
         <a href="mailto:example@example.com"> example@example.com</a>
       </div>
       <div class="span4 offset4">
-        {% template "feedback" . %}
+        {{ template "feedback" . }}
       </div>
     </div></div>
   </footer>
 
-  {% template "httperror" . %}
-  {% template "globalmsg" . %}
-  {% template "scripts" . %}
+  <!-- concat:js scripts/ie.js -->
+    <!--[if lt IE 9]>
+      <script src="components/es5-shim/es5-shim.min.js"></script>
+      <script src="components/json3/lib/json3.min.js"></script>
+      <script> var concat_script_here; </script>
+    <![endif]-->
+  <!-- endconcat -->
 
-  {% if .Test %}
+  <!-- min --><script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js"></script>
+  <script>
+    window.jQuery || document.write('<script src="components/jquery/jquery.min.js">' +
+      '<\/script>');
+  </script>
+
+  <!-- concat:js scripts/{{ .AppName }}.js -->
+    <!-- min --><script src="components/bower-angular/angular.js"></script>
+    <!-- min --><script src="components/bower-angular/angular-sanitize.js"></script>
+    <!-- compile scripts/angular-bootstrap.js -->
+      <script src="components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <!-- endcompile -->
+
+    <!-- compile scripts/scripts.js -->
+      <script src="scripts/app.js"></script>
+      <script src="scripts/controllers/global.js"></script>
+      <script src="scripts/controllers/home.js"></script>
+      <script src="scripts/directives/match.js"></script>
+      <script src="scripts/error-handler.js"></script>
+      <script src="scripts/http-interceptor.js"></script>
+      <script src="scripts/services/global.js"></script>
+    <!-- endcompile -->
+  <!-- endconcat -->
+
+  {{ if .Test }}
     <!-- compile scripts/test.js -->
       <script src="components/bower-angular/angular-mocks.js"></script>      
       <script src="scripts/app.test.js"></script>
     <!-- endcompile -->
-  {% else %}
-    <script type="text/javascript">
-      {% range .Data %}
-        angular.module('{% .Module %}').constant('{% .Name %}', {% .Value %});
-      {% end %}
-    </script>
-  {% end %}
+  {{ end }}
+
+  <script type="text/javascript">
+    {{ range .Data }}
+      angular.module('{{ .Module }}').constant('{{ .Name }}', {{ .Value }});
+    {{ end }}
+  </script>
 
 </body>
 </html>
-{% end %}
-
-{% define "feedback" %}
-<div ng-controller="FeedbackCtrl">
-  <button class="btn btn-inverse pull-right" ng-click="open()">Notificar error</button>
-  <div modal="dlgOpened" close="close()" options="opts" style="display: none;">
-    <div class="modal-header">
-      <button class="close" ng-click="close()">&times;</button>
-      <h4>Notificar error en la página</h4>
-    </div>
-    <div class="modal-body">
-      <p>Dinos cual es el problema que te has encontrado e intentaremos ayudarte
-        en menos de 48 horas.</p>
-      <textarea class="span6" ng-model="message" rows="7"
-        placeholder="Tengo problemas con..." id="message"></textarea>
-    </div>
-    <div class="modal-footer">
-      <button class="btn btn-primary" ng-disabled="!message || message.length < 5"
-        ng-click="send()">Enviar mensaje</button>
-      <button class="btn" ng-click="close()">Cancelar</button>
-    </div>
-  </div>
-</div>
-{% end %}
-
-{% define "httperror" %}
-<div ng-controller="ErrorCtrl">
-  <div modal="!ErrorRegister.isNull()" close="close()" options="opts"
-    style="display: none;">
-    <div class="modal-header">
-      <button class="close" ng-click="close()">&times;</button>
-      <h4>Error en la conexión</h4>
-    </div>
-    <div class="modal-body">
-      <div class="alert alert-error">Ha ocurrido un error mientras se
-        sincronizaban los datos de la aplicación con el servidor.</div>
-      <p>Comprueba que sigues conectado correctamente a Internet y prueba de nuevo.
-        Si el error persiste puedes probar a
-        <a href="javascript:location.reload();">recargar la página</a>.</p>
-    </div>
-    <div class="modal-footer">
-      <button class="btn btn-primary" ng-click="close()">Cerrar</button>
-    </div>
-  </div>
-</div>
-{% end %}
-
-{% define "globalmsg" %}
-<div class="global-msg" id="throbber" ng-controller="GlobalMsgCtrl"
-    ng-show="gm.get() != '';" style="display: none;">
-  <div class="inline-block label label-warning" ng-show="gm.get() == 'loading'">
-    <i class="icon-spinner icon-spin pull-left"></i>&nbsp;&nbsp;
-    Cargando datos...
-  </div>
-  <div class="inline-block label" ng-class="gm.getClass()" ng-show="gm.get() != 'loading'">
-    <table><tr>
-      <td ng-bind-html-unsafe="gm.get();"></td>
-      <td><button class="close msg-close" ng-click="close()">&times;</button></td>
-    </tr></table>
-  </div>
-</div>
-{% end %}
-
-{% define "scripts" %}
-<!-- concat:js scripts/ie.js -->
-  <!--[if lt IE 9]>
-    <script src="components/es5-shim/es5-shim.min.js"></script>
-    <script src="components/json3/lib/json3.min.js"></script>
-    <script> var concat_script_here; </script>
-  <![endif]-->
-<!-- endconcat -->
-
-<!-- min --><script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js"></script>
-<script>
-  window.jQuery || document.write('<script src="components/jquery/jquery.min.js">' +
-    '<\/script>');
-</script>
-
-<!-- concat:js scripts/{{ .AppName }}.js -->
-  <!-- min --><script src="components/bower-angular/angular.js"></script>
-  <!-- min --><script src="components/bower-angular/angular-sanitize.js"></script>
-  <!-- compile scripts/angular-bootstrap.js -->
-    <script src="components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-  <!-- endcompile -->
-
-  <!-- compile scripts/scripts.js -->
-    <script src="scripts/app.js"></script>
-    <script src="scripts/controllers/global.js"></script>
-    <script src="scripts/controllers/home.js"></script>
-    <script src="scripts/directives/match.js"></script>
-    <script src="scripts/error-handler.js"></script>
-    <script src="scripts/http-interceptor.js"></script>
-    <script src="scripts/services/global.js"></script>
-  <!-- endcompile -->
-<!-- endconcat -->
-{% end %}
+{{ end }}
