--- a/tasks/init/v0/templates/laravel/client/app/views/404.html
+++ b/tasks/init/v0/templates/laravel/client/app/views/404.html
@@ -1,7 +1,7 @@
 
-<div class="page-header"><h1>Página desconocida</h1></div>
+<h1>Página desconocida</h1>
 
-<div class="alert alert-error">No hemos podido encontrar la página que
+<div class="alert alert-danger">No hemos podido encontrar la página que
   buscabas en nuestra web.</div><br>
 
 <p>Sentimos las molestias, pero no encontramos la página que nos pides. Hemos
