--- a/tasks/init/v0/templates/laravel/client/app/styles/bootstrap/main.less
+++ b/tasks/init/v0/templates/laravel/client/app/styles/bootstrap/main.less
@@ -1,44 +1,68 @@
 
-
-@import "bootstrap.less";
+@import "../font-awesome/font-awesome.less";
 
 @FontAwesomePath:   "../fonts";
 
+/*!
+ * Bootstrap v3.0.0
+ *
+ * Copyright 2013 Twitter, Inc
+ * Licensed under the Apache License v2.0
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Designed and built with all the love in the world by @mdo and @fat.
+ */
 
-// Fix the color of invalid HTML5 inputs (assigned from form.less in the
-// bootstrap library)
-input:focus:invalid,
-textarea:focus:invalid,
-select:focus:invalid {
-  background-color: @inputBackground;
-  border: 1px solid @inputBorder;
-  .box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
-  .transition(~"border linear .2s, box-shadow linear .2s");
-  color: rgb(85, 85, 85);
+// Core variables and mixins
+@import "../../components/bootstrap/less/variables.less";
+@import "../../components/bootstrap/less/mixins.less";
 
-  &:focus {
-    border-color: rgba(82,168,236,.8);
-    outline: 0;
-    outline: thin dotted \9; /* IE6-9 */
-    .box-shadow(~"inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6)");
-  }
-}
+// Reset
+@import "../../components/bootstrap/less/normalize.less";
+@import "../../components/bootstrap/less/print.less";
 
+// Core CSS
+@import "../../components/bootstrap/less/scaffolding.less";
+@import "../../components/bootstrap/less/type.less";
+@import "../../components/bootstrap/less/code.less";
+@import "../../components/bootstrap/less/grid.less";
 
-.control-group.error input:focus,
-.control-group.error select:focus,
-.control-group.error textarea:focus {
-  background-color: @inputBackground;
-  border: 1px solid rgba(82,168,236,.8);
-  .transition(~"border linear .2s, box-shadow linear .2s");
-  color: rgb(85, 85, 85);
-  outline: 0;
-  outline: thin dotted \9; /* IE6-9 */
-  .box-shadow(~"inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6)");
-}
+@import "../../components/bootstrap/less/tables.less";
+@import "../../components/bootstrap/less/forms.less";
+@import "../../components/bootstrap/less/buttons.less";
 
+// Components: common
+@import "../../components/bootstrap/less/component-animations.less";
+@import "../../components/bootstrap/less/input-groups.less";
+@import "../../components/bootstrap/less/dropdowns.less";
+@import "../../components/bootstrap/less/list-group.less";
+@import "../../components/bootstrap/less/panels.less";
+@import "../../components/bootstrap/less/wells.less";
+@import "../../components/bootstrap/less/close.less";
 
-.control-group.error .input-prepend .add-on,
-.control-group.error .input-append .add-on {
-  border: 1px solid @errorBackground;
-}
+// Components: Nav
+@import "../../components/bootstrap/less/navs.less";
+@import "../../components/bootstrap/less/navbar.less";
+@import "../../components/bootstrap/less/button-groups.less";
+@import "../../components/bootstrap/less/breadcrumbs.less";
+@import "../../components/bootstrap/less/pagination.less";
+@import "../../components/bootstrap/less/pager.less";
+
+// Components: Popovers
+@import "../../components/bootstrap/less/modals.less";
+@import "../../components/bootstrap/less/tooltip.less";
+@import "../../components/bootstrap/less/popovers.less";
+
+// Components: Misc
+@import "../../components/bootstrap/less/alerts.less";
+@import "../../components/bootstrap/less/thumbnails.less";
+@import "../../components/bootstrap/less/media.less";
+@import "../../components/bootstrap/less/labels.less";
+@import "../../components/bootstrap/less/badges.less";
+@import "../../components/bootstrap/less/progress-bars.less";
+@import "../../components/bootstrap/less/carousel.less";
+@import "../../components/bootstrap/less/jumbotron.less";
+
+// Utility classes
+@import "../../components/bootstrap/less/utilities.less"; // Has to be last to override when necessary
+@import "../../components/bootstrap/less/responsive-utilities.less";
