--- a/tasks/init/v0/templates/laravel/client/app/styles/notifications.scss
+++ b/tasks/init/v0/templates/laravel/client/app/styles/notifications.scss
@@ -1,12 +1,27 @@
 
+$right: 10px;
+$left: $right;
+$top: 25px;
+$bottom: $top;
+
+
 .notifications {
   position: fixed;
-  z-index: 2000;
+  right: 25px;
   top: 25px;
-  right: 30px;
+  z-index: 9999;
 
-  & > div {
+  > div {
     position: relative;
-    margin: 5px 0;
+    margin: 5px 0px;
+    float: right;
+    clear: both;
+  }
+
+  .close {
+    margin-left: 5px;
+    margin-top: -8px;
+    padding: 5px;
+    padding-bottom: 0;
   }
 }
